--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@capacitor/app": "7.0.1",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/app": "^7.0.1",
     "@capacitor/core": "7.2.0",
-    "@capacitor/haptics": "7.0.1",
-    "@capacitor/keyboard": "7.0.1",
-    "@capacitor/status-bar": "7.0.1",
+    "@capacitor/haptics": "^7.0.1",
+    "@capacitor/keyboard": "^7.0.1",
+    "@capacitor/status-bar": "^7.0.1",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
@@ -34,7 +35,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "terser": "^5.39.0",
-    "vite": "~5.2.0",
+    "vite": "^5.4.19",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
